# msc_thesis

./: .gitignore  create_video.py  data_analysis.ipynb  events_manager.py  parser.py  pyproject.toml  survey_responses.csv
data/: atari_logs.csv  demographics.csv  pxi_results.csv
