[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.10.1",
    "causalgraphicalmodels>=0.0.4",
    "mne>=1.9.0",
    "numpyro>=0.17.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pymc>=5.20.1",
    "pyxdf>=1.16.8",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
